why page section change and spacing issue

--- a/css/custom-sa.css
+++ b/css/custom-sa.css
@@ -3575,7 +3575,164 @@ button.swiper-pagination-bullet {
 #why .section-1-left h4{
 	word-spacing:2px;
 }
+#why .section-w1 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+#why .section-w1-left {
+    padding-left: 40px;
+}
+#why .section-w1-left span {
+    text-align: left;
+    width: 90%;
+    float: left;
+    display: block;
+    margin-bottom: 25px;
+    margin-top: 15px;
+	color: #62696d;
+    font-size: 17px;
+    font-family: montserratlight;
+}
+#why .section-w2 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+#why .section-w2-left {
+    padding-left: 40px;
+}
+#why .section-w2-subheading {
+    float: none;
+    width: 100%;
+    color: #62696d;
+    font-size: 17px;
+    font-family: montserratlight;
+}
+#why .section-w2-left span {
+    width: 90%;
+	text-align: left;
+    float: left;
+    display: block;
+    margin-bottom: 25px;
+    margin-top: 15px;
+}
+#why .section-w2-left h4 {
+    width: 80%;
+    font-family: montserratUltra_light;
+	color: #fb6c73;
+    font-size: 30px;
+    text-align: left;
+    float: left;
+    display: block;
+    text-transform: uppercase;
+}
+#why .section-w2 img {
+    box-shadow: -10px 5px 28px 6px rgba(0,0,0,0.4);
+}
+#why .secw2-2-new {
+    margin-left: 0px;
+    margin-top: 0px;
+}
+#why .section-w2-left span i {
+    font-size: 60px;
+    color: #fb6c73;
+    position: relative;
+    margin-right: 10px;
+    float: left;
+}
+#why .section-w1-left span i {
+    font-size: 60px;
+    color: #fb6c73;
+    position: relative;
+    margin-right: 10px;
+    float: left;
+}
+#why .section-w1-left h4 {
+    color: #fb6c73;
+    font-size: 30px;
+    font-family: montserratUltra_light;
+    text-align: left;
+    width: 80%;
+    float: left;
+    display: block;
+    text-transform: uppercase;
+	
+}
+#why .section-w1 img {
+    box-shadow: -10px 5px 28px 6px rgba(0,0,0,0.4);
+}
+#why .section-w3 {
+    margin-top: 40px;
+    margin-bottom: 50px;
+}
+#why .section-w3-text {
+    padding-right: 60px;
+    padding-left: 0;
+}
+#why .section-w3-text span {
+    text-align: left;
+    width: 100%;
+    float: left;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+#why .section-w3-text h4 {
+    color: #fb6c73;
+    font-size: 30px;
+    font-family: montserratultra_light;
+    text-align: left;
+    width: 100%;
+    float: left;
+    display: block;
+    margin-top: 0px;
+}
+#why .section-w3 img {
+    box-shadow: -10px 5px 28px 6px rgba(0,0,0,0.4);
+    width: 100%;
+}
+#why .section-w3-left span i {
+    font-size: 60px;
+    color: #fb6c73;
+    position: relative;
+    margin-right: 10px;
+    float: left;
+}
+#why .section-w3-text span {
+    text-align: left;
+    width: 100%;
+    float: left;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
 
+#why .section-w3-text h4 {
+    color: #fb6c73;
+    font-size: 30px;
+    font-family: montserratultra_light;
+    text-align: left;
+    width: 100%;
+    float: left;
+    display: block;
+    margin-top: 0px;
+}
+#why .section-w3-text span i {
+	font-size: 60px;
+    color: #fb6c73;
+    position: relative;
+    margin-right: 10px;
+    float: left;
+}
+#why .section-w3-text span span {
+    color: #62696d;
+    font-size: 18px;
+    font-family: montserratlight;
+    width: 90%;
+    float: left;
+    display: block;
+    margin: 0px;
+    text-align: left;
+}
 #why .collag-left{
     float: left;
     width: 90%;
@@ -3640,6 +3797,49 @@ button.swiper-pagination-bullet {
 	box-shadow: 4px 4px 32px 0px rgba(0,0,0,0.35);
 	width:100%;
 }
+#why .section-2-heading{
+	font-family: montserratlight;
+}
+#why .sec4-2{
+    position: absolute;
+    left: 25%;
+    top: 18%;
+    box-shadow: 2px 0px 8px 2px rgba(0,0,0,0.1);
+}
+#why .sec4-2-new{
+	margin-left: 0px;
+    margin-top: 0px;
+}
+#why .google-trends {
+    margin-top: 50px;
+    margin-bottom: 130px;
+}
+#why .why-text{
+	margin-top:30px;
+}
+#why .section-4{
+	margin-top:40px;
+	margin-bottom:40px;
+}
+#why .section-4-left h4{
+	width:80%;
+    font-family: montserratUltra_light;
+}
+#why .section-4-left span{
+	width:90%;
+}
+#why .section-4-subheading {
+    float: none;
+    width: 100%;
+    color: #62696d;
+    font-size: 17px;
+    font-family: montserratlight;
+}
+#why .sec4-2-1{
+    position: relative;
+    left:4%;
+    box-shadow: 0px 5px 28px 8px rgba(0,0,0,0.2);
+}
 #why .section-4-left {
     padding-left: 40px;
 }
@@ -3665,52 +3865,12 @@ button.swiper-pagination-bullet {
 	font-size:18px;
 	font-family:montserratlight;
 }
-#why .section-4-subheading {
-    float: none;
-    width: 100%;
-    color: #62696d;
-    font-size: 17px;
-    font-family: montserratlight;
-}
-#why .sec4-2-1{
-    position: relative;
-    left:4%;
-    box-shadow: 0px 5px 28px 8px rgba(0,0,0,0.2);
-}
-#why .section-2-heading{
-	font-family: montserratlight;
-}
-#why .sec4-2{
-    position: absolute;
-    left: 25%;
-    top: 18%;
-    box-shadow: 2px 0px 8px 2px rgba(0,0,0,0.1);
-}
-#why .sec4-2-new{
-	margin-left: 0px;
-    margin-top: 0px;
-}
-#why .google-trends {
-    margin-top: 50px;
-    margin-bottom: 130px;
-}
-#why .why-text{
-	margin-top:30px;
-}
-#why .section-4{
-	margin-top:40px;
-	margin-bottom:40px;
-}
-
 #why   .img-2{
 	position: absolute;
     left: 44%;
     top: 0%;
     }
 	
-#why .section-4-left span{
-	width:90%;
-}
 
 #why .section-7{
     float: left;
@@ -3902,10 +4062,7 @@ button.swiper-pagination-bullet {
     /* float: right; */
     color: #eee;
 }
-#why .section-4-left h4{
-	width:80%;
-    font-family: montserratUltra_light;
-}
+
 #why .sec10-testname{
 	width:100%;
 }
